# fpinterface

./: .gitignore  readme.md  requirements.txt  setup_container.sh
app/: model_render.py  server.py  server_config.yaml  single_shot.py
client/: client.py
example/: cam_K.txt
example/blue_big/: blue_big.PLY
example/green_small/: green_small.PLY
example/yellow_middle/: yellow_middle.PLY
fpinterface-client/: README.md  pyproject.toml
fpinterface-client/src/fpinterface_client/: __init__.py  __main__.py  client.py  utility.py  visualize.py
src/: multitask.py  server_utility.py  utility.py
