[project]
name = "fpinterface-client"
version = "0.1.0"
description = "FoundationPose interface for fpinterface (https://github.com/tonyddg/fpinterface)"
readme = "README.md"
authors = [
    { name = "tonyddg", email = "799052200@qq.com" }
]
requires-python = ">=3.8"
dependencies = [
    "matplotlib",
    "numpy>=1.24.4",
    "opencv-python>=4.11.0.86",
    "requests>=2.32.4",
    "scipy>=1.10.1",
    "tyro>=0.9.35",
]

[project.scripts]
fpinterface-client = "fpinterface_client:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "matplotlib>=3.7.5",
    "tyro>=0.9.35",
]
